--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -21,6 +21,7 @@
   "Something went wrong": "Что-то пошло не так",
   "Reload Page": "Перезагрузить страницу",
   "Make another request": "Попробуйте другой запрос",
-  "Load more": "Загрузи больше",
-  "Not Found": "Не удалось найти ресурс по данному адресу"
+  "Load more": "Загрузить ещё",
+  "Not Found": "Не удалось найти ресурс по данному адресу",
+  "No books found": "Не найдено книг, соответствующих вашему запросу"
 }
